# jinja2sql

./: .editorconfig  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  usage.md
jinja2sql/: __init__.py  _core.py  core.py
jinjaq/: __init__.py  core.py
tests/integration/: conftest.py  docker-compose.yml  test_psycopg.py  test_sqlalchemy.py  test_sqlite3.py
tests/integration/sql/postgres/: schema.sql  users.sql
tests/integration/sql/sqlite/: schema.sql  users.sql
tests/unit/: asserts.py  equals.py  test_core.py
tests/unit/sql/: query1.sql
